# HTN-2025

./: .gitignore  API_DOCUMENTATION.md  DEVELOPMENT_GUIDE.md  README.md  check_audio.py  package-lock.json  snap.md  useImages.js
backend/: delete_random_images.py  main.py  populate_coordinates_simple.py  populate_fake_coordinates.py  pyproject.toml
backend/app/: config.py  models.py
backend/app/agent/: agent.py
backend/app/models/: models.py
backend/app/repository/: audio_repository.py  base_repository.py  image_repository.py  video_repository.py
backend/app/routers/: find.py  image.py  image_db.py  video.py
backend/app/utils/: __init__.py  background_worker.py  embedding.py  image_utils.py  tagging.py  transcription.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/database/: database.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-v2/: package-lock.json  package.json  vite.config.ts
frontend-v2/src/: App.css
frontend/src/: App.css  App.jsx  App.tsx  constants.ts  index.css
server/: docker-compose.yml  index.ts  package-lock.json  package.json  tsconfig.json  types.ts
server/controllers/: image.controller.ts  video.controller.ts
server/prisma/: client.ts  schema.prisma
server/routes/: image.router.ts  video.router.ts
server/util/: aiHelpers.ts  tagging.ts
spectacle/Assets/: AudioVideo.ts  Bluetooth Central Module.bluetoothCentralModule  Image.mat  Internet Module.internetModule  Microphone Audio.micaudio  Raw Location Module.rawLocationModule  Scene.scene  wheres.ts  (+5 more)
(+350 files in other folders)
