[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "supabase>=2.18.1",
    "uuid>=1.30",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",
    "pillow>=11.3.0",
]
